--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
 	"devDependencies": {
 		"gh-pages": "^4.0.0"
 	},
-	"homepage": "https://aledc7.github.io/react_admin_dashboard/"
+	"homepage": "https://GonzaloDeCastro.github.io/API-Marvel/"
 }
