Navbar was modified

--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
 	"devDependencies": {
 		"gh-pages": "^4.0.0"
 	},
-	"homepage": "https://gonzalodecastro.github.io/"
+	"homepage": "https://gonzalodecastro.github.io/API-Marvel/"
 }
